# strong-synthesizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pyproject.toml
config/presets/: chiptune_square.toml  genesis_bass.toml  retro_lead.toml
scripts/: setup.sh  validate_build.sh
src/: __init__.py  cli.py  engine.py
src/bridge/: bridge_bindings.cpp  gui_app.py  midi_manager.py  synth_interface.py  vgm_parser.py
src/core/include/: audio_output.hpp  engine.hpp  envelope.hpp  filter.hpp  granular_engine.hpp  operator.hpp  poly_manager.hpp  psg_chip.hpp  ym2612_core.hpp
src/core/source/: audio_output.cpp  engine.cpp  envelope.cpp  filter.cpp  granular_engine.cpp  main.cpp  operator.cpp  poly_manager.cpp  psg_chip.cpp  ym2612_core.cpp
src/midi/: controller.py
src/output/: audio_device.py  sonic_pi_gen.py  wav_export.py
src/synth/: analog.py  fm.py  granular.py
src/voice/: envelope.py  filter.py  poly_manager.py
tests/python/: test_bridge.py
